@@ -46,9 +46,14 @@ static void SetViewNeedsDisplay(HIViewRef inView, RgnHandle inRegion, Boolean in
 
 static CFMutableDictionaryRef sViewMap;
 
-static void (*oldNSViewSetNeedsDisplayIMP)(id, SEL, BOOL);
-static void (*oldNSViewSetNeedsDisplayInRectIMP)(id, SEL, NSRect);
-static NSView *(*oldNSViewNextValidKeyViewIMP)(id, SEL);
+
+typedef void (*SetNeedsDisplayMethod)(id, SEL, BOOL);
+typedef void (*SetNeedsDisplayInRectMethod)(id, SEL, NSRect);
+typedef NSView *(*NextValidKeyViewMethod)(id, SEL);
+
+static SetNeedsDisplayMethod oldNSViewSetNeedsDisplayIMP;
+static SetNeedsDisplayInRectMethod oldNSViewSetNeedsDisplayInRectIMP;
+static NextValidKeyViewMethod oldNSViewNextValidKeyViewIMP;
 
 static void _webkit_NSView_setNeedsDisplay(id self, SEL _cmd, BOOL flag);
 static void _webkit_NSView_setNeedsDisplayInRect(id self, SEL _cmd, NSRect invalidRect);
@@ -63,19 +68,19 @@ static NSView *_webkit_NSView_nextValidKeyView(id self, SEL _cmd);
         Method setNeedsDisplayMethod = class_getInstanceMethod(objc_getClass("NSView"), @selector(setNeedsDisplay:));
         ASSERT(setNeedsDisplayMethod);
         ASSERT(!oldNSViewSetNeedsDisplayIMP);
-        oldNSViewSetNeedsDisplayIMP = (void (*)(id, SEL, BOOL))(method_setImplementation(setNeedsDisplayMethod, (IMP)(_webkit_NSView_setNeedsDisplay)));
+        oldNSViewSetNeedsDisplayIMP = (SetNeedsDisplayMethod)method_setImplementation(setNeedsDisplayMethod, (IMP)_webkit_NSView_setNeedsDisplay);
 
         // Override -[NSView setNeedsDisplayInRect:]
         Method setNeedsDisplayInRectMethod = class_getInstanceMethod(objc_getClass("NSView"), @selector(setNeedsDisplayInRect:));
         ASSERT(setNeedsDisplayInRectMethod);
         ASSERT(!oldNSViewSetNeedsDisplayInRectIMP);
-        oldNSViewSetNeedsDisplayInRectIMP = (void (*)(id, SEL, NSRect))(method_setImplementation(setNeedsDisplayInRectMethod, (IMP)(_webkit_NSView_setNeedsDisplayInRect)));
+        oldNSViewSetNeedsDisplayInRectIMP = (SetNeedsDisplayInRectMethod)method_setImplementation(setNeedsDisplayInRectMethod, (IMP)_webkit_NSView_setNeedsDisplayInRect);
 
         // Override -[NSView nextValidKeyView]
         Method nextValidKeyViewMethod = class_getInstanceMethod(objc_getClass("NSView"), @selector(nextValidKeyView));
         ASSERT(nextValidKeyViewMethod);
         ASSERT(!oldNSViewNextValidKeyViewIMP);
-        oldNSViewNextValidKeyViewIMP = (NSView *(*)(id, SEL))(method_setImplementation(nextValidKeyViewMethod, (IMP)(_webkit_NSView_nextValidKeyView)));
+        oldNSViewNextValidKeyViewIMP = (NextValidKeyViewMethod)method_setImplementation(nextValidKeyViewMethod, (IMP)_webkit_NSView_nextValidKeyView);
     }
 
     CFDictionaryAddValue(sViewMap, nsView, hiView);
