@@ -1,3 +1,15 @@
+2014-09-08  Maciej Stachowiak  <mjs@apple.com>
+
+        Fix 32-bit Mac build for new warnings
+        https://bugs.webkit.org/show_bug.cgi?id=136624
+
+        Reviewed by Darin Adler.
+        
+        (Jessie already fixed this but my version with typedefs seems a tiny bit cleaner.)
+
+        * Carbon/HIViewAdapter.m:
+        (+[HIViewAdapter bindHIViewToNSView:nsView:]): Need to use explicit casting now.
+
 2014-09-08  Eva Balazsfalvi  <evab.u-szeged@partner.samsung.com>
 
         Remove FILTERS flag
